images are been updated

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
     </div>
     <div class="personal_img">
-            <img src="./images/mygg (1).png"  alt="" srcset="" >
+            <img src="./mygg (1).png"  alt="" srcset="" >
     </div>
     </section>
     <!-- Creating About Me Layout in HTML -->
@@ -45,7 +45,7 @@
         </div>
         <div class="content">
             <div class="w50">
-                <img src="./images/20230121_132531_portrait__1_-removebg-preview.png" alt="" class="proPic">
+                <img src="./20230121_132531_portrait__1_-removebg-preview.png" alt="" class="proPic">
             </div>
             <div class="contentBx w50">
                 <h3>Who am i ?</h3>
@@ -54,7 +54,7 @@
                 <p>I have extensive experience working with a variety of programming languages and frameworks, including <b>C, C++, Java and Python</b>, to name a few. My expertise in software development is complemented by my strong analytical and problem-solving skills, which enable me to tackle complex coding challenges with ease.</p><br>
                 <p>I am a firm believer in the power of <b>collaboration</b> and <b>teamwork</b>, and I thrive in dynamic environments where I can learn from my peers and contribute my own insights and expertise. I have worked on a diverse range of projects, from developing <b>mobile apps and games</b> to building complex algorithms and data structures.</p><br>
                 <div class="heading bottom">
-                    <a href="/images/20CE071_Dhairya_Pandya_Resume.pdf" class="btn round">Download CV</a>
+                    <a href="/20CE071_Dhairya_Pandya_Resume.pdf" class="btn round">Download CV</a>
                     <div class="bt">
                         <b>Name:</b> Dhairya Pandya<br>
                         <b>Age:</b> 21
@@ -116,14 +116,14 @@
         <div class="content">
             <div class="workBx">
                 <a href="https://play.google.com/store/apps/details?id=dhairyapandya.com.qrcodeapp" target="_blank">
-                    <img src="./images/app1.png" alt="Android_Logo" srcset="">
+                    <img src="./app1.png" alt="Android_Logo" srcset="">
                     <p>Javascript Complete Real time - Essential Course 2020</p>
                     <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, placeat.</span>
                 </a>
             </div>
             <div class="workBx">
                 <a href="https://play.google.com/store/apps/details?id=dhairyapandya.com.memeapp" target="_blank">
-                    <img src="./images/app2.png" alt="" srcset="">
+                    <img src="./app2.png" alt="" srcset="">
                     <p>HTML 5 from Beginner to Pro-Code [ 7 Days Challange ]</p>
                     <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, placeat.</span>
 
@@ -131,7 +131,7 @@
             </div>
             <div class="workBx">
                 <a href="https://play.google.com/store/apps/details?id=dhairyapandya.com.vanservice2" target="_blank">
-                    <img src="./images/app3.jpg" alt="">
+                    <img src="./app3.jpg" alt="">
                     <p>CSS Animation With Latest Effects - 2020</p>
                     <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, placeat.</span>
 
@@ -139,7 +139,7 @@
             </div>
             <div class="workBx">
                 <a href="https://www.linkedin.com/posts/dhairyapandya_design-augmentedreality-weekend-activity-6953884714898202624-584E?utm_source=share&utm_medium=member_desktop" target="_blank">
-                    <img src="./images/Augmented Reality Maze.jpg" alt="">
+                    <img src="./Augmented Reality Maze.jpg" alt="">
                     <p>Web Design Layouts A Must to Learn For All Levels</p>
                     <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, placeat.</span>
 
@@ -147,7 +147,7 @@
             </div>
             <div class="workBx">
                 <a href="https://www.linkedin.com/posts/dhairyapandya_development-augmentedreality-explorer-activity-6945090632637898752-9PQ6?utm_source=share&utm_medium=member_desktop" target="_blank">
-                    <img src="./images/explorer.jpg" alt="">
+                    <img src="./explorer.jpg" alt="">
                     <p>Beautiful Designs on SignUp , Contact , Login Forms</p>
                     <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, placeat.</span>
 
