some minor modifications

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             </div>
         
             <div class="heading">
-                <a href="https://www.linkedin.com/in/dhairyapandya/" target="_blank" class="btn" style="color:#fff;">View All My Courses</a>
+                <a href="https://www.linkedin.com/in/dhairyapandya/" target="_blank" class="btn" style="color:#fff;">View more in LinkedIn</a>
             </div>
         </div>
     </section>
@@ -258,7 +258,7 @@
 
     <!-- Creating Footer Layout in HTML -->
     <footer class="copyright">
-        <p>&copy; 2020, Yourwebsite.com, Allrights reserved</p>
+        <p>&copy; 2023, Yourwebsite.com, Allrights reserved</p>
     </footer>
 </body>
 </html>
