skills images are changed

--- a/index.html
+++ b/index.html
@@ -78,30 +78,30 @@
             <div class="servicesBx">
                 <img src="https://play-lh.googleusercontent.com/ugEBVDcghA1x9fVldH8oz3aEQnMLki0pEc5xfpaZTi9SQGEbQqM-Cbzb60MU4fLM9bIv" width="84" height="84" alt="AR_CORE_Logo" srcset="">
                 <h3>AR CORE</h3> 
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <p>Google's platform for building augmented reality experiences</p>
             </div>
             <div class="servicesBx">
                 <img src="https://miro.medium.com/max/300/1*R4c8lHBHuH5qyqOtZb3h-w.png" width="84" height="84" alt="Firebase_Logo" srcset="">
                 <h3>Firebase</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <p>A platform based on the cloud that provides backend services</p>
             </div>
             <div class="servicesBx">
                 <img src="https://res.cloudinary.com/startup-grind/image/upload/c_fill,dpr_2.0,f_auto,g_center,h_1080,q_100,w_1080/v1/gcs/platform-data-dsc/events/flutter_Pz1fcv6.png" width="67" height="67" alt="Flutter_Logo" srcset="">
                 
                 <h3>Flutter</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <p>Google's Cross-platform mobile app development framwork</p>
             </div>
             <div class="servicesBx">
                 <img src="https://3.bp.blogspot.com/-VVp3WvJvl84/X0Vu6EjYqDI/AAAAAAAAPjU/ZOMKiUlgfg8ok8DY8Hc-ocOvGdB0z86AgCLcBGAsYHQ/s1600/jetpack%2Bcompose%2Bicon_RGB.png" width="90" height="90" alt="jetpack_Compose_Logo" srcset="">
 
                 <h3>Jetpack Compose</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <p>Jetpack Compose is a modern UI toolkit for Android</p>
             </div>
             <div class="servicesBx">
-                <img src="https://source.android.com/static/docs/setup/images/Android_symbol_green_RGB.png" width="130" alt="Android_Logo" srcset="">
+                <img src="https://cdn.worldvectorlogo.com/logos/kotlin-2.svg" width="130" alt="Android_Logo" srcset="">
 
-                <h3>Android</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h3>Kotlin</h3>
+                <p>Modern, statically-typed programming language for Android</p>
             </div>
         </div>
     </section>
@@ -168,7 +168,7 @@
         </div>
         <div class="content">
             <div class="testimonialBx">
-                <p>Praveen did an excellent creative job, addressing our request quickly, and also providing his own graphic insight, being open to feedback and changes or edits when they arose. He worked with us the entire way. Highly recommended.</p>
+                <p>Dhairya did an excellent creative job, addressing our request quickly, and also providing his own graphic insight, being open to feedback and changes or edits when they arose. He worked with us the entire way. Highly recommended.</p>
                 <h3>Richard Wilson<br>Creative Designer</h3>
             </div>
             <div class="testimonialBx">
