footer is removed

--- a/index.html
+++ b/index.html
@@ -257,8 +257,8 @@
     </section>
 
     <!-- Creating Footer Layout in HTML -->
-    <footer class="copyright">
+<!--     <footer class="copyright">
         <p>&copy; 2023, Yourwebsite.com, Allrights reserved</p>
-    </footer>
+    </footer> -->
 </body>
 </html>
